<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="title_text">My Nanodegree Apps!</string>
    <string name="spotify_text">Spotify Streamer</string>
    <string name="scores_text">Scores App</string>
    <string name="library_text">Library App</string>
    <string name="build_it_text">Build It Bigger</string>
    <string name="xyz_text">XYZ Reader</string>
    <string name="caps_text">Capstone: My Own App</string>
    <string name="action_settings">Settings</string>

    <string name="spotify_toast">This button will launch my spotify app!</string>
    <string name="scores_toast">This button will launch my scores app!</string>
    <string name="library_toast">This button will launch my library app!</string>
    <string name="build_it_toast">This button will launch my build it bigger app!</string>
    <string name="xyz_toast">This button will launch my xyz reader app!</string>
    <string name="caps_toast">This button will launch my capstone app!</string>


</resources>
