<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    >


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true">

            <TextView android:text="@string/title_text"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/abc_text_size_headline_material"
                android:layout_marginBottom="30dp"
                />

           <Button android:id="@+id/spotifyButton"
                android:text="@string/spotify_text"
                 style="@style/ButtonStyle"
                />

            <Button android:id="@+id/scoresButton"
                android:text="@string/scores_text"
                style="@style/ButtonStyle"/>

            <Button android:id="@+id/libraryButton"
                android:text="@string/library_text"
                style="@style/ButtonStyle"/>

            <Button android:id="@+id/buildItButton"
                android:text="@string/build_it_text"
                style="@style/ButtonStyle"/>

            <Button android:id="@+id/xyzButton"
                android:text="@string/xyz_text"
                style="@style/ButtonStyle"/>

            <Button android:id="@+id/capstoneButton"
                android:text="@string/caps_text"
                style="@style/CapstoneButtonStyle"/>

    </LinearLayout>
</RelativeLayout>
